test/compile_errors/stage1/obj/switch_on_enum_with_1_field_with_no_prongs.zig
const Foo = enum { M };

export fn entry() void {
    var f = Foo.M;
    switch (f) {}
}

// error
// backend=stage1
// target=native
//
// tmp.zig:5:5: error: enumeration value 'Foo.M' not handled in switch
